# 2-year

./: .gitignore  README.md
Algorithm/Additional tasks/Task20(Палиндромы)/Task20(Палиндромы)/: Task20(Палиндромы).cpp
Algorithm/Recurrence relations/Task0.5(LCS)/Task0.5(LCS)/: Task0.5(LCS).cpp
Algorithm/Recurrence relations/Task0.5(LCS)/Task0.5(LCS)/x64/Debug/: Task0.5(LCS).exe.recipe
Operating Systems/: README.txt
Operating Systems/Colloquim/Colloquim/: Colloquim.cpp
Operating Systems/Colloquium1/: CMakeLists.txt
Operating Systems/Colloquium1/src/: CMakeLists.txt  Colloquium.cpp  utils.cpp  utils.h
Operating Systems/Colloquium1/tests/: CMakeLists.txt  test_utils.cpp
Operating Systems/Lab1/Creator/: Creator.cpp
Operating Systems/Lab1/Creator/x64/Debug/: Creator.exe.recipe  Creator.ilk  vc143.idb
Operating Systems/Lab1/Creator/x64/Debug/Creator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Creator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Operating Systems/Lab1/Main/: Main.cpp  report.txt
Operating Systems/Lab1/Main/x64/Debug/: Main.exe.recipe  Main.ilk  vc143.idb
Operating Systems/Lab1/Main/x64/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Operating Systems/Lab1/Reporter/: Reporter.cpp
Operating Systems/Lab1/Reporter/x64/Debug/: Reporter.exe.recipe  Reporter.ilk  vc143.idb
Operating Systems/Lab1/Reporter/x64/Debug/Reporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Operating Systems/Lab1/common/: employee.h
Operating Systems/Lab1/common/x64/Debug/common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  common.lastbuildstate
Operating Systems/Lab1/x64/Debug/: common.idb
Operating Systems/Lab1CMake/: CMakeLists.txt
Operating Systems/Lab1CMake/Creator/: CMakeLists.txt  Creator.cpp
Operating Systems/Lab1CMake/Main/: CMakeLists.txt  Main.cpp
Operating Systems/Lab1CMake/Reporter/: CMakeLists.txt  Reporter.cpp
Operating Systems/Lab1CMake/common/: CMakeLists.txt  employee.h  fileops.cpp  fileops.h
Operating Systems/Lab1CMake/tests/: CMakeLists.txt  tests.cpp
Operating Systems/Lab2/Lab2/: average.h  main.cpp
Operating Systems/Lab2/Lab2/Lab2/: average.cpp  min_max.cpp
Operating Systems/Lab2/Lab2/Lab2/x64/Debug/: Lab2.exe.recipe
Operating Systems/Lab2/Lab2CMake/src/: main.cpp  min_max.h
Operating Systems/Lab2/Lab2CMake/tests/: CMakeLists.txt  test_threads.cpp
Operating Systems/Lab2/Lab2CmakeC++98/src/: average.cpp  min_max.h
Operating Systems/Lab2/Lab2CmakeC++98/tests/: CMakeLists.txt  doctest.h
Operating Systems/Lab2CMake/: CMakeLists.txt
Operating Systems/Lab2CMake/src/: average.cpp  average.h  min_max.cpp  min_max.h
Operating Systems/Lab2CMake/tests/: CMakeLists.txt  doctest.h  test_threads.cpp
Operating Systems/Lab2CmakeC++98/: CMakeLists.txt
Operating Systems/Lab2CmakeC++98/src/: average.h  console_mutex.cpp  console_mutex.h  main.cpp  min_max.cpp
Operating Systems/Lab2CmakeC++98/tests/: test_threads.cpp
Operating Systems/Lab3/Lab3Cmake C++98/: CMakeLists.txt
Operating Systems/Lab3/Lab3Cmake C++98/include/: Marker.h  SharedArray.h  SyncPrimitives.h  Utils.h
Operating Systems/Lab3/Lab3Cmake C++98/src/: CMakeLists.txt  Marker.cpp  SharedArray.cpp  SyncPrimitives.cpp  Utils.cpp  main.cpp
Operating Systems/Lab3/Lab3Cmake C++98/tests/: CMakeLists.txt  tests.cpp
